--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.468.0",
-    "next": "15.1.0",
+    "next": "^15.0.0",
     "nuqs": "^2.2.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
